[gd_scene load_steps=24 format=3 uid="uid://dm31mepuwa7ev"]

[ext_resource type="Texture2D" uid="uid://da7kxmy3qkwx4" path="res://images/cards/0.png" id="1_1mjn8"]
[ext_resource type="Script" path="res://scripts/CardInPlay.gd" id="1_yvlfc"]
[ext_resource type="Texture2D" uid="uid://dwf6x0jsobdho" path="res://images/cards/1.png" id="2_4kyw6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nop56"]
atlas = ExtResource("2_4kyw6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvyyw"]
atlas = ExtResource("2_4kyw6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_co2fh"]
atlas = ExtResource("2_4kyw6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp3s7"]
atlas = ExtResource("2_4kyw6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t08na"]
atlas = ExtResource("2_4kyw6")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7utj5"]
atlas = ExtResource("2_4kyw6")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypy4w"]
atlas = ExtResource("2_4kyw6")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ler3b"]
atlas = ExtResource("2_4kyw6")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv1yg"]
atlas = ExtResource("2_4kyw6")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jiwv0"]
atlas = ExtResource("2_4kyw6")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg3e3"]
atlas = ExtResource("2_4kyw6")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwmj6"]
atlas = ExtResource("2_4kyw6")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kc1p"]
atlas = ExtResource("2_4kyw6")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk0v8"]
atlas = ExtResource("2_4kyw6")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb340"]
atlas = ExtResource("2_4kyw6")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_td0uy"]
atlas = ExtResource("2_4kyw6")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2f18g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nop56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvyyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co2fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp3s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t08na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7utj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypy4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ler3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv1yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jiwv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg3e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwmj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kc1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk0v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb340")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td0uy")
}],
"loop": true,
"name": &"1",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_i3odg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack/Cards:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack/Cards:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_4fqyb"]
resource_name = "card_flip"
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CardBack:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CardBack/Cards:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CardBack/Cards:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [15, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_23hsv"]
_data = {
"RESET": SubResource("Animation_i3odg"),
"card_flip": SubResource("Animation_4fqyb")
}

[node name="CardInPlay" type="Node"]
script = ExtResource("1_yvlfc")

[node name="CardBack" type="Sprite2D" parent="."]
texture = ExtResource("1_1mjn8")

[node name="Cards" type="AnimatedSprite2D" parent="CardBack"]
z_index = -1
sprite_frames = SubResource("SpriteFrames_2f18g")
animation = &"1"
frame = 3

[node name="CardFlip" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_23hsv")
}

[connection signal="animation_finished" from="CardFlip" to="." method="_on_card_flip_animation_finished"]
